Bug 72341 - Increase/Decrease font doesn't apply to bullet in RTL paragraph when text script isn't RTL
Summary: Increase/Decrease font doesn't apply to bullet in RTL paragraph when text scr...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords:
Depends on:
Blocks: Bullet-Number-Outline-Lists RTL
  Show dependency treegraph
 
Reported: 2013-12-05 09:30 UTC by Faisal Menawer
Modified: 2025-10-20 14:59 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot for LTR (5.16 KB, image/png)
2013-12-05 09:32 UTC, Faisal Menawer
Details
screenshot for RTL (5.06 KB, image/png)
2013-12-05 09:33 UTC, Faisal Menawer
Details
testdoc (9.96 KB, application/vnd.oasis.opendocument.text)
2015-09-25 15:52 UTC, Lior Kaplan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Faisal Menawer 2013-12-05 09:30:27 UTC
if you change the size of paragraph has bullet numbering
the size of the bullets will changed. But if the paragraph are RTL
the bullets will had one size only.

Steps to reproduce:
1. write some bullet with text.
2. change the text size and direction to RTL.

Current behavior:
the bullet size not changed if the text size are changing.

Expected behavior:
the bullet size changed if the text size are changing. (like the LTR)
Comment 1 Faisal Menawer 2013-12-05 09:32:48 UTC
Created attachment 90294 [details]
screenshot for LTR
Comment 2 Faisal Menawer 2013-12-05 09:33:20 UTC
Created attachment 90295 [details]
screenshot for RTL
Comment 3 Lior Kaplan 2013-12-14 12:47:03 UTC
I couldn't reproduce on 4.1.3 (Debian unstable packages, 64bit) or master (Debian testing, 64bit). Can someone confirm on the 4.2 branch ?
Comment 4 Faisal Menawer 2014-02-06 11:08:10 UTC
i found something new the bug appear only when
you use the increase size shortcut (Ctrl + ])
Comment 5 Maxim Monastirsky 2014-02-06 11:54:17 UTC
Hi Faisal,

I can confirm this bug with master. Take a look at http://opengrok.libreoffice.org/xref/core/sw/source/ui/shells/txtattr.cxx#238. The new font size applied only to scripts that are actually used in the selected text (nScriptTypes). In your case the text is 'Libreoffice' which is SCRIPTTYPE_LATIN only. The problem is that in RTL paragraph the bullet is of SCRIPTTYPE_COMPLEX type.
Comment 6 Maxim Monastirsky 2014-02-06 12:22:50 UTC
It might have something in common with Bug 68808. Seems like the edit engine doesn't return the correct script type for RTL paragraphs. (And increase/decrease also doesn't work for fields in RTL paragraph.)
Comment 7 Joel Madero 2015-05-02 15:44:41 UTC Comment hidden (noise)
Comment 8 Buovjaga 2015-06-21 13:28:00 UTC
(In reply to Faisal Menawer from comment #4)
> i found something new the bug appear only when
> you use the increase size shortcut (Ctrl + ])

Repro.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 3ecef8cedb215e49237a11607197edc91639bfcd
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-19_23:16:58
Locale: fi-FI (fi_FI)
Comment 9 Lior Kaplan 2015-09-25 15:52:51 UTC
Created attachment 119025 [details]
testdoc

Still happens in 5.0.2 (Debian GNU/Linux, 64bit).

It happens both while using the icons from the sidebar or the CTL+[ shortcut. Changing the directionality to RTL resets the bullet size, and changing to LTR brings it to the proportional size. See the attached testdoc.
Comment 10 Xisco Faulí 2016-09-15 12:18:34 UTC
Updating code pointer: http://opengrok.libreoffice.org/xref/core/sw/source/uibase/shells/txtattr.cxx#220 from comment 5
Comment 11 Xisco Faulí 2017-09-29 08:54:09 UTC Comment hidden (noise)
Comment 12 Lior Kaplan 2017-10-02 21:36:27 UTC
Still happens in 5.4.1
Comment 13 Omer Zak 2017-11-03 20:38:14 UTC
Still happens in:

Version: 5.4.2.2.0+
Build ID: 1:5.4.2-3~bpo9+1
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.utf8); Calc: group

OS: Debian 64bit Stretch (Debian 9.2, with some backported packages)


Happens only when I change the text size using the CTRL+[ and CTRL+] shortcuts.
Comment 14 Lior Kaplan 2018-09-17 17:10:33 UTC
Still happens.

Version: 6.1.1.1
Build ID: 1:6.1.1~rc1-2

Debian GNU/Linux on AMD64
Comment 15 QA Administrators 2019-09-18 02:53:13 UTC Comment hidden (noise)
Comment 16 QA Administrators 2021-09-18 03:27:20 UTC Comment hidden (noise)
Comment 17 Faisal 2022-07-01 16:19:21 UTC
Still reproducible in

Version: 7.3.4.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_US.UTF-8); UI: en-US
7.3.4-2
Calc: threaded


Steps to reproduce:
1. Type some text with a bullet (unnumbered or numbered)
2. Make text right-to-left using the paragraphs dialog
3. Resize the text using keyboard shortcuts (Ctrl + [ or Ctrl + ]) or increase/decrease text size button on toolbar
Comment 18 Faisal 2022-07-24 18:32:31 UTC
This bug reproduced in v3.3.0.

Changing version to "inherited from OOo"
Comment 19 Sophie Sipasseuth 2023-12-11 09:34:31 UTC
No repro, the bullet size changed with the text size in RTL and LTR:

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bfbae5ddd52cf80af94b250b9de349f0340dbe34
CPU threads: 8; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: fr-FR (fr_FR); UI: fr-FR
Calc: threaded
Comment 20 Faisal 2024-01-01 16:18:17 UTC
The bug can still be reproduced with my steps in

Version: 24.2.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 5f390384195b7264c6e52add9e90a39790285249
CPU threads: 4; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 21 Commit Notification 2025-10-15 22:25:05 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7cbd793cfcd5513c8e5d85686fa0e29c021bd6f2

tdf#72341 sw: Make inc/dec font size affect all scripts

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2025-10-20 14:59:14 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/13c6bc02d4c60e6aa35ae2145db431cfe8ae6dba

tdf#72341 sw: Make inc/dec font size affect all scripts

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.